# acras

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: alerts.py  analytics.py  cameras.py  incidents.py  reports.py  router.py  websocket.py
backend/app/core/: events.py  exceptions.py  security.py
backend/app/ml/: crash_classifier.py  optical_flow.py  severity_model.py  yolo_detector.py
backend/app/models/: __init__.py  alert.py  analytics.py  base.py  camera.py  incident.py  report.py
backend/app/schemas/: alert.py  analytics.py  camera.py  incident.py  report.py
backend/app/services/: alert_dispatcher.py  analytics_engine.py  detection_engine.py  incident_tracker.py  report_generator.py  stream_manager.py  weather_service.py
backend/app/tasks/: alerting.py  celery_app.py  processing.py  reporting.py
backend/app/templates/: alert_email.html.j2  report_narrative.md.j2  report_structured.json.j2
backend/app/utils/: geo.py  image.py  time.py  validators.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
backend/tests/test_ml/: test_severity_model.py
backend/tests/test_services/: test_incident_tracker.py  test_report_generator.py
backend/tests/test_utils/: test_geo.py  test_validators.py
data/: camera_feeds.json
docs/: api-reference.md  architecture.md  deployment.md  (+2 more)
(+55 files in other folders)
